--- a/index.html
+++ b/index.html
@@ -169,6 +169,57 @@
         <p>Template for hospitality job listings and user interaction UI.</p>
         <a href="https://github.com/fahadhaya72/hotel_web" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
       </div>
+      <!-- Newly added projects -->
+      <div class="card">
+        <h4>Device Safety Checker</h4>
+        <p>Web-based tool that scans connected devices for potential threats and shows system safety percentage.</p>
+        <a href="https://github.com/fahadhaya72/Device-Safety-Checker" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>Network Vulnerability Scanner</h4>
+        <p>Python-based scanner for detecting network vulnerabilities using nmap and CVE database integration.</p>
+        <a href="https://github.com/fahadhaya72/Network-Vulnerability-Scanner" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>FeedBack Form</h4>
+        <p>Frontend feedback collection form showcasing clean UI/UX with validation.</p>
+        <a href="https://github.com/fahadhaya72/FeedBack-Form" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>AI Teacher</h4>
+        <p>TypeScript-powered AI education assistant capable of interactive teaching responses.</p>
+        <a href="https://github.com/fahadhaya72/ai-teacher" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>Plants Free</h4>
+        <p>Modern gardening and plant care HTML template with responsive design.</p>
+        <a href="https://github.com/fahadhaya72/plants_free" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>Shopping Web</h4>
+        <p>Responsive shopping website layout with product display and cart UI built using HTML and CSS.</p>
+        <a href="https://github.com/fahadhaya72/shopping_web" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>Game Web</h4>
+        <p>Fun web-based gaming interface designed using HTML/CSS animations and logic.</p>
+        <a href="https://github.com/fahadhaya72/game_web" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>Hotel Job</h4>
+        <p>Hotel booking or management site layout using pure HTML and CSS, focusing on UI flow and design.</p>
+        <a href="https://github.com/fahadhaya72/Hotel_job" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>EducateView</h4>
+        <p>Online education platform frontend created with HTML and CSS to display courses and study resources.</p>
+        <a href="https://github.com/fahadhaya72/EducateView" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
+        <h4>Three.js Portfolio</h4>
+        <p>3D animated personal portfolio built with Three.js and modern web components.</p>
+        <a href="https://github.com/fahadhaya72/threejs_portfolio" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
     </div>
   </section>
 
