--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           
           <div class="about-cta">
             <a href="#contact" class="btn btn-primary">Hire Me</a>
-            <a href="../cv11992651_file.pdf" class="btn btn-outline" id="downloadCvBtn" download="Fahad_Hayath_CV.pdf">Download CV</a>
+            <a href="../cv11992651_file.pdf" class="btn btn-outline" id="downloadCvBtn" download="HayatFahadIsmailResume (1).pdf">Download CV</a>
           </div>
         </div>
       </div>
