--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
 
     <div class="card-grid">
       <div class="card">
+        <h4>FeelShop</h4>
+        <p>Online Grocery shopping from nearby shops live on Vercel.</p>
+        <a href="https://github.com/fahadhaya72/FeelShop" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
+      </div>
+      <div class="card">
         <h4>Dynamic Portfolio</h4>
         <p>SPA template with dynamic content and live deployment on Vercel.</p>
         <a href="https://github.com/fahadhaya72/dynamic-portfolio" target="_blank"><i class="fab fa-github"></i> View on GitHub</a>
