--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <!-- Experience 1 -->
         <div class="timeline-item">
           <div class="timeline-dot"></div>
-          <div class="timeline-date">Sep 2023 - Present</div>
+          <div class="timeline-date">May 2025 - Present</div>
           <div class="timeline-content">
             <h3>Freelance Full-Stack Developer</h3>
             <h4>Self-Employed</h4>
@@ -268,10 +268,10 @@
         <!-- Experience 2 -->
         <div class="timeline-item">
           <div class="timeline-dot"></div>
-          <div class="timeline-date">Mar 2023 - Aug 2023</div>
+          <div class="timeline-date">Nov 2024 - May 2025</div>
           <div class="timeline-content">
             <h3>Frontend Developer Intern</h3>
-            <h4>Tech Solutions Inc.</h4>
+            <h4>Rapido - Vadodara</h4>
             <ul>
               <li>Developed and maintained responsive web applications using React.js and TypeScript</li>
               <li>Collaborated with UI/UX designers to implement pixel-perfect interfaces</li>
@@ -280,8 +280,6 @@
             </ul>
             <div class="timeline-tech">
               <span>React.js</span>
-              <span>TypeScript</span>
-              <span>Redux</span>
               <span>Material-UI</span>
             </div>
           </div>
@@ -290,21 +288,21 @@
         <!-- Experience 3 -->
         <div class="timeline-item">
           <div class="timeline-dot"></div>
-          <div class="timeline-date">Jun 2022 - Feb 2023</div>
+          <div class="timeline-date">May 2025 - Sept 2025</div>
           <div class="timeline-content">
-            <h3>Web Development Intern</h3>
-            <h4>Digital Creations</h4>
+            <h3>Senior Web Developer</h3>
+            <h4>FuelFlux Technology</h4>
             <ul>
-              <li>Assisted in developing and maintaining client websites using HTML, CSS, and JavaScript</li>
+              <li>Assisted in developing and maintaining client websites using MERN.js</li>
               <li>Implemented responsive designs and cross-browser compatibility</li>
-              <li>Worked with WordPress to create and customize themes and plugins</li>
+              <li>Worked with MERN to create and customize themes and plugins</li>
               <li>Collaborated with the marketing team to implement SEO best practices</li>
             </ul>
             <div class="timeline-tech">
-              <span>HTML5</span>
-              <span>CSS3</span>
-              <span>JavaScript</span>
-              <span>WordPress</span>
+              <span>React</span>
+              <span>tailwind</span>
+              <span>JavaScript & Node(express)</span>
+              <span>MongoDB</span>
             </div>
           </div>
         </div>
